--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="MzMxN2Y0ODMtOWNhMy00YzUzLWFiNTYtZjMwZTRkZDcxYzM4" id="snipcart"></script>
   <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" rel="stylesheet" type="text/css" />
   
-  <link rel="stylesheet" href="http://example.org/scss/main.min.f8990f1bc90c6d252db0b9fe5514ea7d7c910ae252c6625af671567e8155b376.css">
+  <link rel="stylesheet" href="https://manojprotolabz.github.io/ecomm/scss/main.min.f8990f1bc90c6d252db0b9fe5514ea7d7c910ae252c6625af671567e8155b376.css">
   <title>CheeseCity</title>
 </head>
 <body>
