--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   
     <div class="product">
   <h2 class="product__name">Blue cheese</h2>
-  <img class="product__image" src="/uploads/blue.jpg" alt="">
+  <img class="product__image" src="uploads/blue.jpg" alt="">
   <p class="product__description">This long-aged cheese made with Penicillium mold is sure to be one of the stinkiest and strong tasting cheese. It comes with one of the best marbling available on the market.</p>
   <div class="product__button-container">
     <div class="product__price">$12.95</div>
@@ -58,7 +58,7 @@
   
     <div class="product">
   <h2 class="product__name">Camembert</h2>
-  <img class="product__image" src="/uploads/camembert.jpg" alt="">
+  <img class="product__image" src="uploads/camembert.jpg" alt="">
   <p class="product__description">Native from France, this cheese is soft, moist and creamy. It is similar to Brie, but with higher fat content. Best paired with a sweet, crispy biscuit.</p>
   <div class="product__button-container">
     <div class="product__price">$9.95</div>
