--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   
     <div class="product">
   <h2 class="product__name">Blue cheese</h2>
-  <img class="product__image" src="uploads/blue.jpg" alt="">
+  <img class="product__image" src="/ecomm/uploads/blue.jpg" alt="">
   <p class="product__description">This long-aged cheese made with Penicillium mold is sure to be one of the stinkiest and strong tasting cheese. It comes with one of the best marbling available on the market.</p>
   <div class="product__button-container">
     <div class="product__price">$12.95</div>
@@ -58,7 +58,7 @@
   
     <div class="product">
   <h2 class="product__name">Camembert</h2>
-  <img class="product__image" src="uploads/camembert.jpg" alt="">
+  <img class="product__image" src="/ecomm/uploads/camembert.jpg" alt="">
   <p class="product__description">Native from France, this cheese is soft, moist and creamy. It is similar to Brie, but with higher fat content. Best paired with a sweet, crispy biscuit.</p>
   <div class="product__button-container">
     <div class="product__price">$9.95</div>
@@ -76,7 +76,7 @@
   
     <div class="product">
   <h2 class="product__name">Farmhouse Cheddar</h2>
-  <img class="product__image" src="/uploads/cheddar.jpg" alt="">
+  <img class="product__image" src="/ecomm/uploads/cheddar.jpg" alt="">
   <p class="product__description">Made out of highest graded ingredients, this cheese has been aged for three months and is sure you leave you with a sharp-tasting, natural taste.</p>
   <div class="product__button-container">
     <div class="product__price">$4.95</div>
@@ -94,7 +94,7 @@
   
     <div class="product">
   <h2 class="product__name">Gouda Wheel</h2>
-  <img class="product__image" src="/uploads/gouda.jpg" alt="">
+  <img class="product__image" src="/ecomm/uploads/gouda.jpg" alt="">
   <p class="product__description">Want to step up your cheese game? Try our mild, yellow Gouda Wheel. This cheese is made in the Netherlands with raw cow milk.</p>
   <div class="product__button-container">
     <div class="product__price">$299.95</div>
