--- a/index.html
+++ b/index.html
@@ -56,6 +56,24 @@
     </button>
   </div>
 </div>
+	
+	<div class="product">
+  <h2 class="product__name">Blue cheese</h2>
+  <img class="product__image" src="/ecomm/uploads/blue.jpg" alt="">
+  <p class="product__description">This long-aged cheese made with Penicillium mold is sure to be one of the stinkiest and strong tasting cheese. It comes with one of the best marbling available on the market.</p>
+  <div class="product__button-container">
+    <div class="product__price">$12.95</div>
+    <button
+      class="snipcart-add-item buy-button"
+      data-item-id="BLUE_CHEESE"
+      data-item-name="Blue cheese"
+      data-item-price="12.95"
+      data-item-url="https://snipcart-hugo-forestry.netlify.com"
+      data-item-description="This long-aged cheese made with Penicillium mold is sure to be one of the stinkiest and strong tasting cheese. It comes with one of the best marbling available on the market.">
+      Add to cart
+    </button>
+  </div>
+</div>
 
   <div class="product">
   <h2 class="product__name">Camembert</h2>
